--- a/styles.css
+++ b/styles.css
@@ -1,189 +1,213 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;1,500&family=Playfair+Display:ital,wght@0,700;1,400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;1,500&family=Playfair+Display:ital,wght@0,700;1,400&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
-    --font-1: 'Montserrat', sans-serif;
-    --font-2: 'Playfair Display', serif;
+  --font-1: "Montserrat", sans-serif;
+  --font-2: "Playfair Display", serif;
+
+  --color-white: #ffffff;
+  --color-orange: #cc6161;
+  --color-grey-1: #eeeeee;
+  --color-grey-2: #888888;
 }
 
 body {
-    padding: .9rem;
+  padding: 1rem;
+  background: linear-gradient(23deg, #ca8c94, #a5a5a5, #d4c1c3);
 }
 
+/* Header of Recipe page */
 #header-recipe h1 {
-    margin-top: 1.6rem;
-    font-family: var(--font-2);
-    font-weight: 700;
-    font-weight: 900;
+  margin-top: 1.6rem;
+  font: 700 1.9rem var(--font-2);
 }
 .header-recipe__content {
-    display: flex;
-    margin: .7rem 2rem 0 0;
+  margin: 0.7rem 2rem 0 0;
+  display: flex;
 }
 .header-recipe__content i {
-    color: #bdbdbd;
-    font-size: 1.2rem;
-    margin-right: .6rem;
+  margin-right: 0.6rem;
+  font-size: 1.2rem;
+  color: var(--color-grey-1);
 }
 .header-recipe__content p {
-    font-size: 1rem;
-    font-family: var(--font-1);
-    font-weight: 500;
-    font-style: italic;
+  font: italic 500 1rem var(--font-1);
 }
 #header-recipe img {
-    margin: 2rem 0;
-    max-width: 100%;
+  margin: 2rem 0;
+  max-width: 100%;
+  border-radius: 12px;
 }
 
+/* Standarization of recipe */
 #standard-recipe {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 1.5rem;
+  margin-bottom: 1.5rem;
+  display: flex;
+  flex-direction: column;
 }
 .standard-recipe__yields {
-    margin: 0 0 1rem 0;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+  margin: 0 0 1rem 0;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 .standard-recipe__yields span {
-    font-size: 1.8rem;
-    margin-right: .4rem;
-    color:  #F2994A;
+  margin-right: 0.4rem;
+  font-size: 1.8rem;
+  color: var(--color-orange);
 }
 .standard-recipe__yields h3 {
-    color: #bdbdbd;
-    font-family: var(--font-1);
-    font-size: .7rem;
-    font-weight: 700;
-    text-transform: uppercase;
+  font: 700 0.7rem var(--font-1);
+  text-transform: uppercase;
+  color: var(--color-grey-1);
 }
 .standard-recipe__yields h4 {
-    font-family: var(--font-1);
-    font-size: .9rem;
-    font-weight: 500;
-    color:  #F2994A;
+  font: 500 0.9rem var(--font-1);
+  color: var(--color-orange);
 }
 .standard-recipe__times {
-    margin: 1rem 0 .5rem 0;
-    display: flex;
-    justify-content: space-between;
-} 
+  margin: 1rem 0 0.5rem 0;
+  display: flex;
+  justify-content: space-between;
+}
 .times {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .times i {
-    font-size: 1.3rem;
-    margin-right: .4rem;
+  font-size: 1.3rem;
+  margin-right: 0.4rem;
 }
 .times h3 {
-    color: #bdbdbd;
-    font-family: var(--font-1);
-    font-size: .7rem;
-    font-weight: 700;
-    text-transform: uppercase;
+  font: 700 0.7rem var(--font-1);
+  text-transform: uppercase;
+  color: var(--color-grey-1);
 }
 .times h4 {
-    font-family: var(--font-1);
-    font-size: .9rem;
-    font-weight: 500;
+  font: 500 0.9rem var(--font-1);
 }
 
+/* Content of recipe, ingredients and instructions */
 .content-recipe__ingredients h2 {
-    padding: .5rem 0;
-    font-size: 1.5rem;
-    font-family: var(--font-2);
-    font-weight: 700;
+  padding: 0.5rem 0;
+  font: 700 1.5rem var(--font-2);
 }
 .content-recipe__ingredients h3 {
-    padding: .5rem 0 1.3rem 0;
-    font-style: italic;
-    font-size: 1.35rem;
-    font-family: var(--font-2);
-    font-weight: 400;
+  padding: 0.5rem 0 1.3rem 0;
+  font: italic 400 1.35rem var(--font-2);
 }
 .ingredients {
-    margin-bottom: 1.7rem;
-    font-family: var(--font-1);
-    font-weight: 400;
+  margin-bottom: 1.7rem;
+  font: 400 1rem var(--font-1);
 }
 .ingredient {
-    line-height: 1.7rem;
-    margin-bottom: 1.1rem;
-    display: flex;
-    align-items: center;
-    font-size: 1rem;
+  margin-bottom: 1.1rem;
+  display: flex;
+  align-items: center;
+  line-height: 1.7rem;
 }
 .ingredient input {
-    margin-right: 1rem;
-    transform: scale(1.9);
+  margin-right: 1rem;
+  transform: scale(1.9);
 }
 .bold {
-    font-weight: 700;
+  font-weight: 700;
 }
 .content-recipe__instructions {
-    counter-reset: list-number;
+  counter-reset: list-number;
 }
 .content-recipe__instructions h2 {
-    margin: 1rem 0 2rem 0;
-    font-size: 1.6rem;
-    font-family: var(--font-2);
-    font-weight: 700;
+  margin: 1rem 0 2rem 0;
+  font: 700 1.6rem var(--font-2);
 }
 .instruction {
-    margin-bottom: 3.4rem;
-    display: flex;
-    align-items: flex-start;
+  margin-bottom: 3.4rem;
+  display: flex;
+  align-items: flex-start;
 }
 .instruction p {
-    margin-left: 1rem;
-    line-height: 1.3;
-    font-size: 1.1rem;
-    font-family: var(--font-1);
-    font-weight: 400;
+  margin-left: 1rem;
+  line-height: 1.3;
+  font: 400 1.1rem var(--font-1);
 }
 .instruction::before {
-    counter-increment: list-number;
-    content: counter(list-number);
-    
-    color: #fff;
-    font-size: 1.1rem;
-    font-weight: bold;
-    padding: .4rem .8rem;
-    border-radius: 4px;
-    background: #F2994A;
-}
-.content-recipe__source {
-    font-family: var(--font-1);
-    font-weight: 400;
-    font-size: .9rem;
-    font-style: italic;
-    color: #bdbdbd;
-}
-.content-recipe__source a {
-    text-decoration: none;
-    color: #bdbdbd;
+  counter-increment: list-number;
+  content: counter(list-number);
+  padding: 0.4rem 0.8rem;
+  font: 700 1.1rem var(--font-2);
+  border-radius: 4px;
+  color: var(--color-white);
+  background: var(--color-orange);
 }
 
+.content-recipe__source {
+  font: italic 400 0.9rem var(--font-1);
+  color: var(--color-grey-1);
+}
+.content-recipe__source a {
+  text-decoration: none;
+  color: var(--color-grey-1);
+}
+
+/* Footer of de page */
 .footer {
-    font-family: var(--font-1);
-    margin-top: 12rem;
-    margin-bottom: 1rem;
-    text-align: center;
-    font-style: normal;
-    font-weight: 400;
-    font-size: .8rem;
-    color: #888888;
+  margin: 12rem 0 1rem 0;
+  text-align: center;
+  font: normal 400 0.8rem var(--font-1);
+  color: var(--color-grey-2);
 }
 .username a {
-    font-weight: 700;
-    color: #888888;
+  font-weight: 700;
+  color: var(--color-grey-2);
+}
+
+/* Media Queries */
+
+@media screen and (min-width: 768px) {
+  :root {
+    font-size: 18px;
+  }
+  body {
+    margin: 0 15vw;
+  }
+  main {
+    margin-top: 1.5rem;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    align-items: flex-start;
+  }
+  #standard-recipe {
+    background: #c2a9ab;
+    margin-left: 12%;
+    padding: 3rem 1rem;
+    box-shadow: 0 0 20px 0 #868686;
+    border-radius: 12px;
+    justify-content: center;
+    align-items: center;
+    transition: box-shadow 1s;
+  }
+  #standard-recipe:hover {
+    box-shadow: 0 0 20px 0 #4b4b4b;
+  }
+  .standard-recipe__yields {
+    margin: 0;
+    width: 200px;
+    justify-content: center;
+  }
+  .standard-recipe__times {
+    height: 240px;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
+  }
+  .times {
+    align-items: flex-start;
+  }
 }
